--- a/Webapp/views/layouts/layout.ejs
+++ b/Webapp/views/layouts/layout.ejs
@@ -44,6 +44,10 @@
 
 <body>
 
+  <header>
+    <img src="images/logo.png" alt="">
+  </header>
+
   <%- partial('../partials/header.ejs') %>
 
   <%- body %>
