--- a/Webapp/views/pages/productos.ejs
+++ b/Webapp/views/pages/productos.ejs
@@ -1,22 +1,9 @@
-<table class="table table-secondary table-hover mt-4">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Descripcion</th>
-      <th scope="col">Precio</th>
-      <th scope="col">Modelo</th>
-      <th scope="col">Marca</th>
-    </tr>
-  </thead>
-  <tbody>
-      <% productos.forEach( articulo =>{ %>
-      <tr>
-      <th scope="row"><%=articulo.id%></th>
-      <td><%=articulo.descripcion%></td>
-      <td><%=articulo.precio%></td>
-      <td><%=articulo.modelo%></td>
-      <td><%=articulo.marca%></td>
-      </tr>
-      <% }) %>
-  </tbody>
-</table>
+<div class="container mt-4">
+  <h1>AQUI VAN LOS PRODUCTOS</h1>
+</div>
+
+
+
+
+
+
