--- a/Webapp/assets/styles/importer.less
+++ b/Webapp/assets/styles/importer.less
@@ -9,14 +9,18 @@
  *   https://sailsjs.com/anatomy/assets/styles/importer-less
  */
 
+//AQUI UNOS JEMPLOS DE COMO FUNCIONA LESS
+
 
 // For example:
 //
+//CREAMOS UNA RCHIVO LESS QUE ALMACENA LAS VARIABLES
 @import 'variables/colors.less';
 // @import 'mixins/foo.less';
 // @import 'mixins/bar.less';
 // @import 'mixins/baz.less';
 //
+/**AQUI CREAMOS UN ARCHIVO LESS PARA LOS ESTILOS A APLICAR*/
 @import 'styleguide.less';
 // @import 'mixins-and-variables.less';
 // @import 'pages/login.less';
