--- a/Webapp/assets/styles/styleguide.less
+++ b/Webapp/assets/styles/styleguide.less
@@ -1,3 +1,5 @@
+/*ASI SE MONTAN LOS ESTILOS CON LESS PARA DESPUES SER PROCESADOR O CONVERTIDOS A CSS*/
+
 header{
     background-color: @principal;
 
