--- a/Webapp/views/partials/header.ejs
+++ b/Webapp/views/partials/header.ejs
@@ -4,7 +4,8 @@
 
       <img src="/images/celu.svg" width="30" height="30" class="d-inline-block align-top"
         alt="">
-      Bootstrap
+      
+        <%=titulo%>
 
     </a>
 
