--- a/Webapp/views/layouts/layout.ejs
+++ b/Webapp/views/layouts/layout.ejs
@@ -45,7 +45,7 @@
 <body>
 
   <header>
-    <img src="images/logo.png" alt="">
+    <img src="images/logo.png">
   </header>
 
   <%- partial('../partials/header.ejs') %>
