--- a/Webapp/views/layouts/layout.ejs
+++ b/Webapp/views/layouts/layout.ejs
@@ -43,10 +43,9 @@
 </head>
 
 <body>
+<!--con dos puntos subimos un nivel-->
 
-  <header>
-    <img src="images/logo.png">
-  </header>
+
 
   <%- partial('../partials/header.ejs') %>
 
