--- a/Webapp/views/partials/header.ejs
+++ b/Webapp/views/partials/header.ejs
@@ -4,8 +4,9 @@
 
       <img src="/images/celu.svg" width="30" height="30" class="d-inline-block align-top"
         alt="">
-      
-        <%=titulo%>
+        <!--ESTE SI EL TITULO BIENE DESDE LA RUTA-->
+      <!--%=titulo%--> 
+        CELUBARATO
 
     </a>
 
